--- a/NgheNhacTrucTuyen/Views/ChuDe/EditCD.cshtml
+++ b/NgheNhacTrucTuyen/Views/ChuDe/EditCD.cshtml
@@ -5,55 +5,133 @@
 
 <div class="Root__main-view">
     <div class="main-view-container">
-        <div style="margin-top: 64px;">
-
-        </div>
+        <div style="margin-top: 64px;"></div>
+        <br />
+        <br />
         @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
 
-            <div class="form-horizontal">
-                <h4>ChuDe</h4>
+            <div class="form-container">
+                <h1 class="form-header">Chỉnh sửa chủ đề</h1>
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 @Html.HiddenFor(model => model.MaCD)
 
                 <div class="form-group">
-                    <label>Tên chủ đề</label>
-                    <div class="col-md-10">
-
-                        @Html.EditorFor(model => model.TenCD, new { htmlAttributes = new { @class = "form-control", required = true } })
-                        @Html.ValidationMessageFor(model => model.TenCD, "", new { @class = "text-danger" })
-                    </div>
+                    <label class="control-label">Tên chủ đề</label>
+                    @Html.EditorFor(model => model.TenCD, new { htmlAttributes = new { @class = "form-control", placeholder = "Nhập tên chủ đề", required = "required" } })
+                    @Html.ValidationMessageFor(model => model.TenCD, "", new { @class = "text-danger" })
                 </div>
 
                 <div class="form-group">
-                    <label>Ảnh chủ đề</label>
-                    <div class="col-md-10">
-
-                        @Html.EditorFor(model => model.Picture, new { htmlAttributes = new { @type = "file", required = true } })
-                        @Html.ValidationMessageFor(model => model.Picture, "", new { @class = "text-danger" })
-                    </div>
+                    <label class="control-label">Ảnh chủ đề</label>
+                    <input type="text" value="@ViewBag.anhchude" readonly class="form-control" />
+                    @Html.EditorFor(model => model.Picture, new { htmlAttributes = new { @type = "file", @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Picture, "", new { @class = "text-danger" })
                 </div>
 
                 <div class="form-group">
-                    <label>Màu sắc chủ đề</label>
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Color, new { htmlAttributes = new { @class = "form-control", required = true } })
-                        @Html.ValidationMessageFor(model => model.Color, "", new { @class = "text-danger" })
-                    </div>
+                    <label class="control-label">Màu sắc chủ đề</label>
+                    @Html.EditorFor(model => model.Color, new { htmlAttributes = new { @class = "form-control", required = "required", placeholder = "Nhập màu sắc" } })
+                    @Html.ValidationMessageFor(model => model.Color, "", new { @class = "text-danger" })
                 </div>
-                @ViewBag.ok
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Save" class="btn btn-default" />
-                    </div>
+
+                <div class="form-submit">
+                    <input type="submit" value="Lưu" class="btn-submit" />
                 </div>
             </div>
         }
 
-        <div>
-            @Html.ActionLink("Back to List", "DSBaiHat", "QLBH")
-        </div>
+
     </div>
 </div>
+
+<style>
+    body {
+        background-color: #121212;
+        color: #b3b3b3;
+        font-family: Arial, sans-serif;
+    }
+
+    .form-container {
+        max-width: 700px;
+        margin: 0 auto;
+        padding: 20px;
+        background-color: #282828;
+        border-radius: 8px;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    }
+
+    .form-header {
+        text-align: center;
+        color: #1DB954;
+        font-weight: bold;
+        font-size: 24px;
+        margin-bottom: 20px;
+    }
+
+    .form-group {
+        margin-bottom: 15px;
+    }
+
+    .control-label {
+        display: block;
+        font-size: 14px;
+        margin-bottom: 5px;
+        color: #b3b3b3;
+    }
+
+    .form-control {
+        width: 100%;
+        padding: 10px;
+        background-color: #333;
+        color: #fff;
+        border: 1px solid #444;
+        border-radius: 4px;
+    }
+
+        .form-control:focus {
+            outline: none;
+            border-color: #1DB954;
+        }
+
+    .btn-submit {
+        background-color: #1DB954;
+        color: #fff;
+        border: none;
+        padding: 10px 20px;
+        border-radius: 4px;
+        font-size: 16px;
+        cursor: pointer;
+    }
+
+        .btn-submit:hover {
+            background-color: #1aa34a;
+        }
+
+    .text-danger {
+        font-size: 12px;
+        color: red;
+    }
+
+    .form-submit {
+        text-align: center;
+        margin-top: 20px;
+    }
+
+    .back-link {
+        text-align: center;
+        margin-top: 20px;
+    }
+
+        .back-link a {
+            color: #1DB954;
+            font-size: 16px;
+            text-decoration: none;
+        }
+
+            .back-link a:hover {
+                color: #1aa34a;
+            }
+</style>
