--- a/NgheNhacTrucTuyen/Views/QLBH/DSBaiHat.cshtml
+++ b/NgheNhacTrucTuyen/Views/QLBH/DSBaiHat.cshtml
@@ -184,6 +184,38 @@
             // Get the element with id="defaultOpen" and click on it
             document.getElementById("defaultOpen").click();
         </script>
-        
+
     </div>
 </div>
+
+
+<style>
+    
+    table {
+        width: 100%;
+        color: #ccc;
+    }
+
+    th, td {
+        padding: 10px;
+        text-align: left;
+    }
+
+    th {
+        background-color: #222222;
+    }
+
+    tr:nth-child(even) {
+        background-color: #282828;
+    }
+
+    tr:hover {
+        background-color: #333;
+    }
+
+    thead {
+        background-color: #282828;
+    }
+   
+  
+</style>
