--- a/NgheNhacTrucTuyen/Views/QLTK/CreateTK.cshtml
+++ b/NgheNhacTrucTuyen/Views/QLTK/CreateTK.cshtml
@@ -5,59 +5,133 @@
 
 <div class="Root__main-view">
     <div class="main-view-container">
-        <div style="margin-top: 64px;">
-
-        </div>
-
+        <div style="margin-top: 64px;"></div>
+        <br />
+        <br />
         @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
 
-            <div class="form-horizontal">
-                <h1>Tài khoản</h1>
+            <div class="form-container">
+                <h1 class="form-header">Tài khoản</h1>
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
+                <div class="form-content">
+                    <!-- Email Field -->
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label" })
                         @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", required = true } })
                         @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
                     </div>
-                </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.PassWord, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
+                    <!-- Password Field -->
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.PassWord, htmlAttributes: new { @class = "control-label" })
                         @Html.EditorFor(model => model.PassWord, new { htmlAttributes = new { @class = "form-control", required = true } })
                         @Html.ValidationMessageFor(model => model.PassWord, "", new { @class = "text-danger" })
                     </div>
-                </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Role, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
+                    <!-- Role Field -->
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Role, htmlAttributes: new { @class = "control-label" })
                         @Html.EditorFor(model => model.Role, new { htmlAttributes = new { @class = "form-control", required = true } })
                         @Html.ValidationMessageFor(model => model.Role, "", new { @class = "text-danger" })
                     </div>
-                </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Ten, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
+                    <!-- Name Field -->
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Ten, htmlAttributes: new { @class = "control-label" })
                         @Html.EditorFor(model => model.Ten, new { htmlAttributes = new { @class = "form-control", required = true } })
                         @Html.ValidationMessageFor(model => model.Ten, "", new { @class = "text-danger" })
                     </div>
-                </div>
-                @ViewBag.ok
-                @ViewBag.sucess
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Create" class="btn-default" />
+
+                    @ViewBag.ok
+                    @ViewBag.sucess
+
+                    <!-- Submit Button -->
+                    <div class="form-group form-submit">
+                        <input type="submit" value="Create" class="btn-submit" />
                     </div>
                 </div>
             </div>
         }
-
-
     </div>
 </div>
+
+<style>
+    body {
+        background-color: #121212;
+        color: #b3b3b3;
+        font-family: Arial, sans-serif;
+    }
+
+    .form-container {
+        max-width: 700px;
+        margin: 0 auto;
+        padding: 20px;
+        background-color: #282828;
+        border-radius: 8px;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    }
+
+    .form-header {
+        text-align: center;
+        color: #1DB954;
+        font-weight: bold;
+        font-size: 24px;
+        margin-bottom: 10px;
+    }
+
+    .form-content {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .form-group {
+        margin-bottom: 15px;
+    }
+
+    .control-label {
+        font-size: 14px;
+        margin-bottom: 5px;
+        color: #b3b3b3;
+    }
+
+    .form-control {
+        width: 100%;
+        padding: 10px;
+        background-color: #333;
+        color: #fff;
+        border: 1px solid #444;
+        border-radius: 4px;
+    }
+
+        .form-control:focus {
+            outline: none;
+            border-color: #1DB954;
+        }
+
+    .form-submit {
+        text-align: center;
+        margin-top: 20px;
+    }
+
+    .btn-submit {
+        background-color: #1DB954;
+        color: #fff;
+        border: none;
+        padding: 10px 20px;
+        border-radius: 4px;
+        font-size: 16px;
+        cursor: pointer;
+    }
+
+        .btn-submit:hover {
+            background-color: #1aa34a;
+        }
+
+    .text-danger {
+        color: #e74c3c;
+        font-size: 12px;
+    }
+</style>
