--- a/NgheNhacTrucTuyen/Views/QLTK/EditTK.cshtml
+++ b/NgheNhacTrucTuyen/Views/QLTK/EditTK.cshtml
@@ -5,62 +5,138 @@
 
 <div class="Root__main-view">
     <div class="main-view-container">
-        <div style="margin-top: 64px;">
+        <div style="margin-top: 64px;"></div>
+        <br />
+        <br />
 
-        </div>
         @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
 
-            <div class="form-horizontal">
-                <h4>account</h4>
+            <div class="form-container">
+                <h1 class="form-header">Tài khoản</h1>
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 @Html.HiddenFor(model => model.MaTK)
 
+                <!-- Email Field -->
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
-                    </div>
+                    <label class="control-label">Email</label>
+                    @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", required = "required", placeholder = "Nhập email" } })
+                    @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
                 </div>
 
+                <!-- Password Field -->
                 <div class="form-group">
-                    @Html.LabelFor(model => model.PassWord, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.PassWord, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.PassWord, "", new { @class = "text-danger" })
-                    </div>
+                    <label class="control-label">Mật khẩu</label>
+                    @Html.EditorFor(model => model.PassWord, new { htmlAttributes = new { @class = "form-control", required = "required", placeholder = "Nhập mật khẩu" } })
+                    @Html.ValidationMessageFor(model => model.PassWord, "", new { @class = "text-danger" })
                 </div>
 
+                <!-- Role Field -->
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Role, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Role, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Role, "", new { @class = "text-danger" })
-                    </div>
+                    <label class="control-label">Vai trò</label>
+                    @Html.EditorFor(model => model.Role, new { htmlAttributes = new { @class = "form-control", required = "required", placeholder = "Nhập vai trò" } })
+                    @Html.ValidationMessageFor(model => model.Role, "", new { @class = "text-danger" })
                 </div>
 
+                <!-- Name Field -->
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Ten, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Ten, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Ten, "", new { @class = "text-danger" })
-                    </div>
+                    <label class="control-label">Tên</label>
+                    @Html.EditorFor(model => model.Ten, new { htmlAttributes = new { @class = "form-control", required = "required", placeholder = "Nhập tên" } })
+                    @Html.ValidationMessageFor(model => model.Ten, "", new { @class = "text-danger" })
                 </div>
-                @ViewBag.ok
 
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Save" class="btn btn-default" />
-                    </div>
+                <div class="form-group form-submit">
+                    <input type="submit" value="Lưu" class="btn-submit" />
                 </div>
             </div>
         }
 
-        <div>
-            @Html.ActionLink("Back to List", "Index")
-        </div>
+      
     </div>
 </div>
+
+<style>
+    body {
+        background-color: #121212;
+        color: #b3b3b3;
+        font-family: Arial, sans-serif;
+    }
+
+    .form-container {
+        max-width: 700px;
+        margin: 0 auto;
+        padding: 20px;
+        background-color: #282828;
+        border-radius: 8px;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    }
+
+    .form-header {
+        text-align: center;
+        color: #1DB954;
+        font-weight: bold;
+        font-size: 24px;
+        margin-bottom: 20px;
+    }
+
+    .form-group {
+        margin-bottom: 20px;
+    }
+
+    .control-label {
+        display: block;
+        font-size: 14px;
+        margin-bottom: 5px;
+        color: #b3b3b3;
+    }
+
+    .form-control {
+        width: 100%;
+        padding: 10px;
+        background-color: #333;
+        color: #fff;
+        border: 1px solid #444;
+        border-radius: 4px;
+    }
+
+        .form-control:focus {
+            outline: none;
+            border-color: #1DB954;
+        }
+
+    .btn-submit {
+        background-color: #1DB954;
+        color: #fff;
+        border: none;
+        padding: 10px 20px;
+        border-radius: 4px;
+        font-size: 16px;
+        cursor: pointer;
+    }
+
+        .btn-submit:hover {
+            background-color: #1aa34a;
+        }
+
+    .text-danger {
+        font-size: 12px;
+        color: red;
+    }
+
+    .form-submit {
+        text-align: center;
+        margin-top: 20px;
+    }
+
+    .btn-link {
+        color: #1DB954;
+        text-decoration: none;
+        font-size: 16px;
+    }
+
+        .btn-link:hover {
+            text-decoration: underline;
+        }
+</style>
